add notebook and deployment documentation

--- a/script/task_invoker.ipynb
+++ b/script/task_invoker.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cd92ccf9-a4e9-4cda-9b3c-f7e21e24e1dc",
+   "metadata": {},
+   "source": [
+    "You can make web requests to invoke Flask-based HTTP functions as needed to load more cleaning more data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a17a529c-79ac-4831-9b89-4b1b995fa221",
@@ -24,7 +32,9 @@
     "    Args:\n",
     "        start_row_index (int): Start index (inclusive)\n",
     "        end_row_index (int): End index (inclusive)\n",
-    "        source (str): Source parameter\n",
+    "        source (str): Specifies the data source.\n",
+    "            - 'training': Uses the knowledge base or an external database.\n",
+    "            - 'testing': Uses the Heymate internal database.\n",
     "        batch_size (int): Number of rows per batch\n",
     "        max_workers (int): Number of concurrent workers\n",
     "        base_url (str): Base URL of the ETL endpoint\n",
@@ -50,6 +60,22 @@
     "        for future in as_completed(futures):\n",
     "            status, url, result = future.result()\n",
     "            print(f\"[{status}] {url} → {result[:200]}...\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1eb0a93-c5a0-4515-bc79-43624e3c77be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage of dispatch_etl_requests\n",
+    "\n",
+    "# This will dispatch ETL requests for rows 500 to 600 (inclusive),\n",
+    "# using the 'training' source, in batches of 10 rows each.\n",
+    "# Up to 5 requests will be processed concurrently.\n",
+    "# The requests will be sent to the specified ETL endpoint.\n",
     "\n",
     "# dispatch_etl_requests(500, 600, \"training\", batch_size=10, max_workers=5)"
    ]
