--- a/script/visualization.ipynb
+++ b/script/visualization.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "68a541fe-d34f-4930-8d5e-bf9fc38c4b00",
+   "metadata": {},
+   "source": [
+    "Visualization utilities for menu item recommendations and popularity scores.\n",
+    "\n",
+    "This module provides functions for plotting interactive bar charts to visualize the popularity of recommended menu items using Altair.\n",
+    "It includes tools for formatting, color-coding, and exporting visualizations to HTML"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5424d672-0fcf-4131-8a60-4c86c75d8994",
    "metadata": {},
    "outputs": [],
@@ -13,6 +24,32 @@
     "from menu_recommender import recommend_menu_items\n",
     "\n",
     "def plot_popularity_chart(json_str: str, width: int = 800, height: int = 600, export_html: bool = False):\n",
+    "    \"\"\"\n",
+    "    Generates and displays (or exports) a bar chart visualizing the popularity of menu items.\n",
+    "\n",
+    "    Args:\n",
+    "        json_str (str): JSON-formatted string representing a list of menu item records.\n",
+    "            Each record must contain the fields: 'dish_base', 'dish_flavor', and 'popularity_score'.\n",
+    "        width (int, optional): Width of the chart in pixels. Defaults to 800.\n",
+    "        height (int, optional): Height of the chart in pixels. Defaults to 600.\n",
+    "        export_html (bool, optional): If True, returns the chart as an HTML string; otherwise, displays the chart in the browser. Defaults to False.\n",
+    "\n",
+    "    Returns:\n",
+    "        None or str: If export_html is True, returns the chart as an HTML string. Otherwise, displays the chart and returns None.\n",
+    "\n",
+    "    Example:\n",
+    "        records = [\n",
+    "            {\"dish_base\": \"pizza\", \"dish_flavor\": \"cheese\", \"popularity_score\": 0.91},\n",
+    "            {\"dish_base\": \"pasta\", \"dish_flavor\": \"alfredo\", \"popularity_score\": 0.87}\n",
+    "        ]\n",
+    "        plot_popularity_chart(json.dumps(records), width=600, height=400)\n",
+    "\n",
+    "    Notes:\n",
+    "        - The top three dishes are color-coded for emphasis.\n",
+    "        - Popularity scores are displayed as percentages.\n",
+    "        - Rank labels ('Top 1', 'Top 2', 'Top 3') are annotated for the highest-ranking dishes.\n",
+    "        - Requires Altair and pandas for visualization and data processing.\n",
+    "    \"\"\"\n",
     "    # Custom colors\n",
     "    heymate_yello = '#F5D866'\n",
     "    heymate_red = '#ED5751'\n",
@@ -113,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "a2c305ff-9da4-4351-91db-da6edbe2c30e",
    "metadata": {},
    "outputs": [
@@ -137,23 +174,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-38d5ca0cb1dc4c678de43f79ca337e36.vega-embed {\n",
+       "  #altair-viz-5c6604b6b8e44d61979c995bfa896e7c.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-38d5ca0cb1dc4c678de43f79ca337e36.vega-embed details,\n",
-       "  #altair-viz-38d5ca0cb1dc4c678de43f79ca337e36.vega-embed details summary {\n",
+       "  #altair-viz-5c6604b6b8e44d61979c995bfa896e7c.vega-embed details,\n",
+       "  #altair-viz-5c6604b6b8e44d61979c995bfa896e7c.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-38d5ca0cb1dc4c678de43f79ca337e36\"></div>\n",
+       "<div id=\"altair-viz-5c6604b6b8e44d61979c995bfa896e7c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-38d5ca0cb1dc4c678de43f79ca337e36\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-38d5ca0cb1dc4c678de43f79ca337e36\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5c6604b6b8e44d61979c995bfa896e7c\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5c6604b6b8e44d61979c995bfa896e7c\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -213,6 +250,7 @@
     }
    ],
    "source": [
+    "# Example\n",
     "recommendation_json = json.dumps(recommend_menu_items(type1=\"pizza restaurant\", type2=\"burger joint\", type3=\"sandwich shop\"))\n",
     "plot_popularity_chart(recommendation_json)"
    ]
@@ -220,9 +258,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:heymate-mds-data-clean-pipeline]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-heymate-mds-data-clean-pipeline-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
